--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,10 @@ node_modules/
 dist
 dist-ssr
 *.local
+
+# Project-specific
 *.pdf
+globalpowerplantdatabase
 
 # Editor directories and files
 .vscode/*
