--- a/web/package.json
+++ b/web/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.0.0",
     "react-leaflet-cluster": "^3.1.0",
+    "recharts": "^3.1.2",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7"
   },
@@ -40,6 +41,7 @@
     "@types/node": "^24.2.1",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "@types/recharts": "^1.8.29",
     "@vitejs/plugin-react": "^4.7.0",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.32.0",
