--- a/api/package.json
+++ b/api/package.json
@@ -7,7 +7,9 @@
     "test": "test"
   },
   "scripts": {
-    "dev": "nodemon --watch src --exec ts-node src/app.ts"
+    "dev": "nodemon --watch src --exec ts-node src/app.ts",
+    "build": "tsc",
+    "start": "node dist/app.js"
   },
   "keywords": [],
   "author": "",
