--- a/compose.yaml
+++ b/compose.yaml
@@ -3,17 +3,23 @@ services:
     build: ./api # where the Dockerfile is for the service
     container_name: power-plants-api
     ports:
-      - "3000:3000"
+      - "${API_PORT}:3000"
     depends_on:
       - db     # ensure db is started before backend
     env_file:
       - ./api/.env
+    environment:
+      DB_HOST: db
+      DB_PORT: 5432 #??
+      DB_USER: ${DB_USER}
+      DB_PASSWORD: ${DB_PASSWORD}
+      DB_NAME: ${DB_NAME}
 
   web:
     build: ./web
     container_name: power-plants-web
     ports:
-      - "5173:8080"   # local:container
+      - "${WEB_PORT}:80"   # local:container
     env_file:
       - ./web/.env
     depends_on:
@@ -27,10 +33,12 @@ services:
       POSTGRES_USER: ${DB_USER}
       POSTGRES_PASSWORD: ${DB_PASSWORD}
       POSTGRES_DB: ${DB_NAME}
+      
     ports:
       - "${DB_PORT}:5432"   # optional, if want to connect from host machine
     volumes:
       - db_data:/var/lib/postgresql/data
+      - ./api/src/db:/docker-entrypoint-initdb.d  #? runs sql files when volume first created
 
 volumes:
   db_data:
