--- a/web/package.json
+++ b/web/package.json
@@ -17,6 +17,9 @@
     "@mui/x-data-grid": "^8.10.0",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/vite": "^4.1.11",
     "@types/cors": "^2.8.19",
     "axios": "^1.11.0",
