--- a/compose.yaml
+++ b/compose.yaml
@@ -1,6 +1,6 @@
 services:
   api:
-    build: ./api # where the Dockerfile is for the service
+    build: ./api # location of Dockerfile for the service
     container_name: power-plants-api
     ports:
       - "${API_PORT}:3000"
@@ -10,7 +10,7 @@ services:
       - ./api/.env
     environment:
       DB_HOST: db
-      DB_PORT: 5432 #??
+      DB_PORT: 5432
       DB_USER: ${DB_USER}
       DB_PASSWORD: ${DB_PASSWORD}
       DB_NAME: ${DB_NAME}
